--- a/contacto.html
+++ b/contacto.html
@@ -1,97 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PetSpa-Servicios</title>
+    <meta charset='UTF-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- CSS -->
+    <link rel='stylesheet' href='css/style.css'>
+    <!-- JS -->
+    <script src="js/clima.js"></script>
+
+
     <!-- Agregar el Favicon -->
-    <link rel="icon" href="img/favicon.png" />
+    <link rel="icon" href="img/favicon.png">
 
     <!-- Agregar fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <title>PetSpa</title>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav>
-        <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
-        <ul class="navegacion">
-            <li><a href="index.html" class="nav-link">Inicio</a></li>
-            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-            <li><a href="productos.html" class="nav-link">Productos</a></li>
-            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-        </ul>
-        <ul>
-            <li><a href="#" class="nav-link">Soy cliente</a></li>
-        </ul>
-        <button class="menu-hamburguesa" id="menu-hamburguesa">
-            <ion-icon class="barras" name="menu-outline"></ion-icon>
-        </button>
-    </nav>
-
-
-
+    <header>
+        <!-- Navbar -->
+        <nav>
+            <h1><img src="img/logo.png" alt="logo"></a>PetSpa</h1>
+            <ul class="navegacion">
+                <li><a href="index.html" class="nav-link">Inicio</a></li>
+                <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                <li><a href="productos.html" class="nav-link">Productos</a></li>
+                <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+            </ul>
+            <ul>
+                <li><a href="#" class="nav-link">Soy cliente</a></li>
+            </ul>
+            <button class="menu-hamburguesa" id="menu-hamburguesa">
+                <ion-icon class="barras" name="menu-outline"></ion-icon>
+            </button>
+        </nav>
+    </header>
 
     <main>
-        <section>
-            <h1>CONTACTO</h1>
-            <h2>Formulario de Contacto</h2>
-            <form action="">
-                <fieldset>
-                    <legend>Datos Personales</legend>
+        <section class="contact" id="contact">
+            <h2>Dejanos un mensaje</h2>
+            <div class="contact-form-container">
+                <div class="contact-form">
+                    <!-- Formulario -->
+                    <form id="formulario">
 
-                    <!-- Nombre -->
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre...">
-
-                    <br>
-                    <!-- Apellido -->
-                    <label for="apellido">Apellido: </label>
-                    <input type="text" name="apellido" id="apellido" size="10" maxlength="5" required>
-
-                    <br>
-                    <!-- Mail -->
-                    <label for="mail">Mail: </label>
-                    <input type="email">
-
-                    <br>
-                    <!-- Adjuntar archivo -->
-                    <label for="archivo">Adjuntar archivo: </label>
-                    <input type="file">
-                </fieldset>
+                        <!-- Grupo: Nombre -->
+                        <div class="formulario__grupo" id="grupo__nombre">
+                            <label for="nombre" class="formulario__label">Nombre</label>
+                            <div class="formulario__grupo-input">
+                                <input type="text" class="formulario__input" name="nombre" id="nombre"
+                                    placeholder="John Doe">
+                                <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                            </div>
+                            <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede
+                                contener numeros, letras y guion bajo.</p>
+                        </div>
 
 
-                <br><br>
+                        <!-- Grupo: Correo Electronico -->
+                        <div class="formulario__grupo" id="grupo__correo">
+                            <label for="correo" class="formulario__label">Correo Electrónico</label>
+                            <div class="formulario__grupo-input">
+                                <input type="email" class="formulario__input" name="correo" id="correo"
+                                    placeholder="correo@correo.com">
+                                <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                            </div>
+                            <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos,
+                                guiones y guion bajo.</p>
+                        </div>
 
-                </fieldset>
+                        <!-- Grupo: Teléfono -->
+                        <div class="formulario__grupo" id="grupo__telefono">
+                            <label for="telefono" class="formulario__label">Teléfono</label>
+                            <div class="formulario__grupo-input">
+                                <input type="text" class="formulario__input" name="telefono" id="telefono"
+                                    placeholder="1122447799">
+                                <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                            </div>
+                            <p class="formulario__input-error">El telefono solo puede contener numeros y el maximo son
+                                14 dígitos.</p>
+                        </div>
 
-                <br><br>
-                <!-- Comentarios -->
-                <label for="comentarios">Comentarios: </label>
-                <br>
-                <textarea name="comentarios" id="comentarios" cols="30" rows="10"></textarea>
+                        <!-- Grupo: Comentarios -->
+                        <div class="formulario__grupo" id="grupo__comentarios">
+                            <label for="comentario" class="formulario__label">Mensaje</label>
+                            <div class="form-control">
+                                <textarea type="text" cols="60" rows="10" class="formulario__input" name="comentario"
+                                    id="comentario" placeholder="Escriba su mensaje"></textarea>
+                                <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                            </div>
+                            <p class="formulario__input-error">El mensaje no puede estar vacío.</p>
+                        </div>
 
-                <br><br>
+                        <!-- Grupo: Terminos y Condiciones -->
+                        <div class="formulario__grupo" id="grupo__terminos">
+                            <label class="formulario__label">
+                                <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
+                                Acepto los Terminos y Condiciones
+                            </label>
+                        </div>
 
-                <!-- Botones -->
-                <input type="submit" value="Enviar Formulario">
-                <input type="reset" value="Borrar">
+                        <div class="formulario__mensaje" id="formulario__mensaje">
+                            <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario
+                                correctamente. </p>
+                        </div>
 
-
-            </form>
-
+                        <div class="formulario__grupo formulario__grupo-btn-enviar">
+                            <button type="submit" class="formulario__btn">Enviar</button>
+                            <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado
+                                exitosamente!</p>
+                        </div>
+                    </form>
         </section>
-        <br><br><br>
-        <section>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210177.06960026242!2d-58.66172176718747!3d-34.6037389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1692050566059!5m2!1ses!2sar"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <!-- Clima -->
+        <section class="elclima">
+            <h3>Revisa el clima en tu ciudad para aprovechar los servicios al aire libre</h3>
+                
+            
+            <div class="clima">
+                <div class="card">
+                    <div class="search">
+                        <input type="text" class="search-bar" placeholder="Buscar">
+                        <button><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
+                                height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z">
+                                </path>
+                            </svg></button>
+                    </div>
+                    <div class="weather loading">
+                        <h2 class="city">Clima in Buenos Aires</h2>
+                        <h1 class="temp">51°C</h1>
+                        <div class="flex">
+                            <img id="icono-animado" src="" alt="" height="128" width="128">
+                            <div class="description">Cloudy</div>
+                        </div>
+                        <div class="humidity">Humedad: 60%</div>
+                        <div class="wind">Velocidad del viento: 6.2 km/h</div>
+                    </div>
+                </div>
+                <div class="ubicacion">
+                    <h3>Nuestra ubicación</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.2907674396047!2d-58.448418849014885!3d-34.57150856320627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5c3fdd1dd85%3A0xd87fcb26355e9425!2sSpaCan%20Pet%20Shop!5e0!3m2!1ses!2sar!4v1605618028929!5m2!1ses!2sar"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+            </div>
         </section>
+
     </main>
 
 
@@ -109,6 +178,15 @@
                 </p>
             </div>
     </footer>
+
+    <script src="js/formulario.js"></script>
+
+    <!--Menú Hamburguesa-->
+    <script src="js/app.js"></script>
+
+    <!-- Iconos Menú Hamburguesa scripts -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
