--- a/productos.html
+++ b/productos.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset='UTF-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- CSS -->
     <link rel='stylesheet' href='css/style.css'>
-    <title>PetSpa</title>
 
     <!-- Agregar el Favicon -->
     <link rel="icon" href="img/favicon.png">
@@ -13,13 +16,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Animate CSS CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <title>PetSpa</title>
 </head>
 
 <body>
-    
+    <header>
         <!-- Navbar -->
         <nav>
-            <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
+            <h1><img src="img/logo.png" alt="logo"></a>PetSpa</h1>
             <ul class="navegacion">
                 <li><a href="index.html" class="nav-link">Inicio</a></li>
                 <li><a href="servicios.html" class="nav-link">Servicios</a></li>
@@ -29,15 +37,16 @@
             <ul>
                 <li><a href="#" class="nav-link">Soy cliente</a></li>
             </ul>
+
             <button class="menu-hamburguesa" id="menu-hamburguesa">
                 <ion-icon class="barras" name="menu-outline"></ion-icon>
             </button>
-
         </nav>
+    </header>
     
         <!-- productos a la venta en el spa -->
     <section class="port">
-        <img src="img/compra online3.jpg" alt="DANI" loading="lazy" class="IMG COMPRA" />
+        <img src="img/produc.jpg" alt="DANI" loading="lazy" class="IMG COMPRA" />
         <div class="bio animate__animated animate__shakeX">
             <h2 class="bio-titulo">PRODUCTOS QUE PUEDES ADQUIRIR AQUI</h2>
             <p class="bio-texto">
@@ -210,14 +219,8 @@ $8500.
 
     </section>
 
-
-<body>
-
-
-
-
     <footer>
-         <div class="grid-container">
+        <div class="grid-container">
 
                 <div class="item1">
                     <p class="copy">
@@ -229,7 +232,12 @@ $8500.
                     </p>
                 </div>
         </footer>
-        <script src='js/script.js'>
+    <!-- Menú Hamburguesa -->
+    <script src="js/app.js"></script>
+
+    <!-- Iconos Menú Hamburguesa scripts -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
         </script>
 </body>
